# TrafficTracker

./: .gitignore  Cargo.toml  docker-compose.yml
dashboard/: package-lock.json  package.json
kafka-sink/: Cargo.toml  Dockerfile
kafka-sink/src/: main.rs
nginx/: nginx.conf
processor/: Cargo.toml  Dockerfile
processor/src/: main.rs
producer/: Cargo.toml  Dockerfile
producer/src/: main.rs
shared/: Cargo.toml
shared/src/: force_order.rs  lib.rs  macros.rs  processed_force_order.rs
