[package]
name = "kafka-sink"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8.7", features = ["macros"] }
env_logger = "0.11.8"
log = "0.4.29"
rdkafka = { version = "0.38", features = ["cmake-build"] }
tokio = { version = "1.48.0", features = ["full"]}
futures-util = "0.3.31"
tokio-stream = { version = "0.1", features = ["sync"] }
